# upnp-router-control

./: .bzrignore  .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  Makefile.am  README  README.md  configure.ac  meson.build  upnp-port-mapper.desktop.in  waf  wscript
build-aux/meson/: postinstall.py
data/: Makefile.am  meson.build  org.upnproutercontrol.UPnPRouterControl.appdata.xml.in  upnp-port-mapper.glade  upnp-router-control.1  upnp-router-control.appdata.xml.in  upnp-router-control.desktop.in  upnp-router-control.glade  upnp-router-control.ui  wscript_build
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  POTFILES.skip  de.po  el.po  en_GB.po  es.po  eu.po  fr.po  gl.po  it.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  template.pot  upnp-router-control.pot  wscript_build
src/: Makefile.am  meson.build  upnp-port-mapper.c  upnp-port-mapper.h  upnp-router-control-headermenu.ui  upnp-router-control.gresource.xml  upnp-router-control.ui  urc-graph.c  urc-graph.h  urc-gui.c  urc-gui.h  urc-main.c  urc-upnp.c  urc-upnp.h  wscript_build
