install_subdir(
  'scalable/apps',
  install_dir: join_paths(data_dir, 'icons/hicolor/scalable'),
)


foreach icon_size: ['16x16', '22x22', '24x24', '32x32', '48x48']
  install_subdir(
    join_paths(icon_size, 'apps'),
    install_dir: join_paths(data_dir, 'icons/hicolor', icon_size),
  )
endforeach

